==> luk6xff/DevLibs/RFM69/platform/stm32cube/hal/rfm69-cube-hal.c <==

/**
 *  @brief:  Implementation of a RFM69 platform dependent [STM32 CUBE HAL] radio functions
 *  @author: luk6xff
 *  @email:  lukasz.uszko@gmail.com
 *  @date:   2020-01-05
 */

#include "rfm69-cube-hal.h"

//-----------------------------------------------------------------------------
void rfm69_cube_init(rfm69* const dev, rfm69_cube* const cube_dev)
{
    dev->platform_dev = cube_dev;

    rfm69_init(dev);
}

//-----------------------------------------------------------------------------
void rfm69_cube_deinit(rfm69* const dev)
{
    // IO
    rfm69_io_deinit(dev);
}

//-----------------------------------------------------------------------------
void rfm69_io_init(rfm69* const dev)
{
    //rfm69_cube* const pd = (rfm69_cube*)dev->platform_dev;
    // Init SPI
    // SPI already configured in MX_SPIx_Init - generated by cube
    rfm69_delay_ms(10);
}

//-----------------------------------------------------------------------------
void rfm69_io_deinit(rfm69* const dev)
{
    // EMPTY
}


//-----------------------------------------------------------------------------
void rfm69_ioirq_init(rfm69* const dev)
{
    //rfm69_cube* const pd = (rfm69_cube*)dev->platform_dev;
    // dio0 HAL_GPIO_EXTI_Callback must be reimplemented in the main and shall
    // 				 contain a call the proper rfm69 isr handler function
}

//-----------------------------------------------------------------------------
void rfm69_reset(rfm69* const dev)
{
    rfm69_cube* const pd = (rfm69_cube*)dev->platform_dev;
    HAL_GPIO_WritePin(pd->reset_port, pd->reset_pin, GPIO_PIN_SET);
    rfm69_delay_ms(10);
    HAL_GPIO_WritePin(pd->reset_port, pd->reset_pin, GPIO_PIN_RESET);
    rfm69_delay_ms(10);
}

//-----------------------------------------------------------------------------
void rfm69_write_buffer(rfm69* const dev, uint8_t addr, const uint8_t *buffer, uint8_t size)
{
    rfm69_cube* const pd = (rfm69_cube*)dev->platform_dev;

    uint8_t address = (addr | 0x80);
    HAL_GPIO_WritePin(pd->nss_port, pd->nss_pin, GPIO_PIN_RESET);
    HAL_SPI_Transmit(pd->spi, &address, sizeof(addr), 100);
    HAL_SPI_Transmit(pd->spi, (uint8_t*)buffer, size, 1000);
    HAL_GPIO_WritePin(pd->nss_port, pd->nss_pin, GPIO_PIN_SET);
}

//-----------------------------------------------------------------------------
void rfm69_read_buffer(rfm69* const dev, uint8_t addr, uint8_t *buffer, uint8_t size)
{
    rfm69_cube* const pd = (rfm69_cube*)dev->platform_dev;

    uint8_t address = (addr & 0x7F);
    HAL_GPIO_WritePin(pd->nss_port, pd->nss_pin, GPIO_PIN_RESET);
    HAL_SPI_Transmit(pd->spi, &address, sizeof(addr), 100);
    HAL_SPI_Receive(pd->spi, buffer, size, 1000);
    HAL_GPIO_WritePin(pd->nss_port, pd->nss_pin, GPIO_PIN_SET);
}

//-----------------------------------------------------------------------------
void rfm69_delay_ms(int delay_ms)
{
	uint32_t tickstart_ms = HAL_GetTick();
	while((HAL_GetTick()-tickstart_ms) < delay_ms);
}

//-----------------------------------------------------------------------------
uint32_t rfm69_timer_read_ms()
{
    return HAL_GetTick();
}

//-----------------------------------------------------------------------------
void rfm69_print_all_regs(rfm69* const dev)
{
    uint8_t reg_val;
    printf("\r\n<<<RFM69 REGISTERS>>>\r\nADDR - HEX\r\n");
    for (uint8_t reg_addr = 1; reg_addr <= 0x71; reg_addr++)
    {
        reg_val = rfm69_read_reg(dev, reg_addr);
        printf("0x%x", reg_addr);
        printf(" - ");
        printf("0x%x\r\n", reg_val);
    }
}

//-----------------------------------------------------------------------------
